добавляет навигацию  Главная О Седоне Гостиницы

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <nav>Главная</nav>
     <nav>О Седоне</nav>
     <nav>Гостиницы</nav>
-<button>Хочу сюда</button>
+    <button>Хочу сюда!</button>
     <p></p>
   </body>
 </html>
