Добавлет заголовок первого уровня

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <nav>О Седоне</nav>
     <nav>Гостиницы</nav>
     <button>Хочу сюда!</button>
+    <h1>Седона — небольшой городок в Аризоне, заслуживающий большего!</h1>
     <p></p>
   </body>
 </html>
