добавляет заголовок 2 уровня

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <nav>Гостиницы</nav>
     <button>Хочу сюда!</button>
     <h1>Седона — небольшой городок в Аризоне, заслуживающий большего!</h1>
+    <h2>Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</h2>
     <p></p>
   </body>
 </html>
