--- a/index.html
+++ b/index.html
@@ -5,12 +5,42 @@
     <title>HTML Academy: Седона</title>
   </head>
   <body>
-    <nav>Главная</nav>
-    <nav>О Седоне</nav>
-    <nav>Гостиницы</nav>
-    <button>Хочу сюда!</button>
-    <h1>Седона — небольшой городок в Аризоне, заслуживающий большего!</h1>
-    <h2>Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</h2>
-    <p></p>
-  </body>
+    <header class="page-header">
+      <nav class="navigation">
+        <img class="logo" src="" alt="Логотип Сидона" />
+        <ul class="navigaton-list">
+          <li class="navigation-item">
+            <a class="navigation-item" href="about.html">Главная</a>
+          </li>
+          <li class="navigation-item">
+            <a class="navigation-item" href="#">О седоне</a>
+          </li>
+          <li class="navigation-item">
+            <a class="navigation-item" href="Hotel.html">Гостиницы</a>
+          </li>
+        </ul>
+        <ul class="navigaton-list navigation-user">
+          <li class="navigation-item">
+            <a class="navigation-link" href="#">
+              <span class="visually-hidden"> Поиск </span>
+            </a>
+          </li>
+          <li class="navigation-item">
+            <a class="navigation-link" href="#">
+              <span class="visually-hidden"> Лайк </span>
+            </a>
+          </li>
+          <button>Хочу сюда!</button>
+        </ul>
+      </nav>
+    </header>
+    <main class="main-index">
+      <h1 class="visually-hidden">Седона — небольшой городок в Аризоне,
+        заслуживающий большего!</h1>
+        <p>Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</p>
+        <h2 >Настоящий городок</h2>
+        <p>Седона — не аттракцион для туристов, там течёт своя жизнь</p>
+        <img src="#" alt="photo-1">
+
+
 </html>
