--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
   <body>
     <header class="page-header">
       <nav class="navigation">
-        <img class="logo" src="" alt="Логотип Сидона" />
+        <img class="logo" src="" alt="Логотип Седона" />
         <ul class="navigaton-list">
           <li class="navigation-item">
             <a class="navigation-item" href="about.html">Главная</a>
-          </li>
+          </li> 
           <li class="navigation-item">
             <a class="navigation-item" href="#">О седоне</a>
           </li>
