--- a/index.html
+++ b/index.html
@@ -7,40 +7,79 @@
   <body>
     <header class="page-header">
       <nav class="navigation">
-        <img class="logo" src="" alt="Логотип Седона" />
-        <ul class="navigaton-list">
+        <ul class="navigation-list">
           <li class="navigation-item">
-            <a class="navigation-item" href="about.html">Главная</a>
-          </li> 
-          <li class="navigation-item">
-            <a class="navigation-item" href="#">О седоне</a>
+            <img class="logo" src="#" alt="Логотип Седона" />
           </li>
           <li class="navigation-item">
-            <a class="navigation-item" href="Hotel.html">Гостиницы</a>
+            <a class="navigation-link" href="index.html">Главная</a>
+          </li>
+          <li class="navigation-item">
+            <a class="navigation-link" href="#">О седоне</a>
+          </li>
+          <li class="navigation-item">
+            <a class="navigation-link" href="#">Гостиницы</a>
           </li>
         </ul>
-        <ul class="navigaton-list navigation-user">
+        <ul class="navigation-list navigation-user">
           <li class="navigation-item">
             <a class="navigation-link" href="#">
-              <span class="visually-hidden"> Поиск </span>
+              <span class="visualli-hiden">Поиск</span>
             </a>
           </li>
           <li class="navigation-item">
             <a class="navigation-link" href="#">
-              <span class="visually-hidden"> Лайк </span>
+              <span class="visually-hidden">Избранное</span>
             </a>
           </li>
-          <button>Хочу сюда!</button>
+          <li class="navigation-item">
+            <button>Хочу сюда</button>
+          </li>
         </ul>
       </nav>
     </header>
     <main class="main-index">
-      <h1 class="visually-hidden">Седона — небольшой городок в Аризоне,
-        заслуживающий большего!</h1>
-        <p>Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</p>
-        <h2 >Настоящий городок</h2>
-        <p>Седона — не аттракцион для туристов, там течёт своя жизнь</p>
-        <img src="#" alt="photo-1">
-
-
+      <h1 class="visually-hidden">
+        Седона — небольшой городок в Аризоне, заслуживающий большего!
+      </h1>
+      <p>Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</p>
+      <section class="advantages">
+        <h2 class="visually-hidden">Преимущества</h2>
+        <ul class="advatages-list">
+          <li class="advatages-item">
+            <h3 class="advanages-title">Настоящий городок</h3>
+            <p class="advantures-description">
+              Седона — не аттракцион для туристов, там течёт своя жизнь
+            </p>
+            <img class="foto-1" src="#" alt="фото города Седона" />
+          </li>
+          <li class="advatages-item">
+            <h3 class="advanages-title">Небольшая площадь</h3>
+            <p class="advantures-description">
+              Все достопримечательности находятся очень близко
+            </p>
+          </li>
+          <li class="advatages-item">
+            <h3 class="advanages-title">Красивая дорога</h3>
+            <p class="advantures-description">
+              Ехать в Седону из Лас-Вегаса совсем не скучно!
+            </p>
+          </li>
+          <li class="advatages-item">
+            <h3 class="advanages-title">Мало туристов</h3>
+            <p class="advantures-description">
+              Большинство едет в Гранд Каньон и толпится там
+            </p>
+          </li>
+          <li class="advantages-item">
+            <img class="foto-2" src="#" alt="Фото моста дьявола" />
+            <h3 class="advanages-title">Там есть мост дьявола</h3>
+            <p class="advantures-description">
+              Да, по нему можно пройти! Если вы осмелитесь, разумеется
+            </p>
+          </li>
+        </ul>
+      </section>
+    </main>
+  </body>
 </html>
