--- a/index.html
+++ b/index.html
@@ -80,6 +80,39 @@
           </li>
         </ul>
       </section>
+      <section class="Frame 40">
+        <ul class="frame-list">
+          <li class="frame-item">
+            <img class="Advantage-icon" src="#" alt="Логотип Жилья" />
+            <h3 class="frame-title">Жильё</h3>
+            <p class="frame-description">
+              Рекомендуем пожить в настоящем мотеле, всё как в кино!
+            </p>
+          </li>
+          <li class="frame-item">
+            <img class="Advantage-icon" src="#" alt="Логотип Еды" />
+            <h3 class="frame-title">Еда</h3>
+            <p class="frame-description">
+              Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!
+            </p>
+          </li>
+          <li class="frame-item">
+            <img class="Advantage-icon" src="#" alt="Логотип Сувениров" />
+            <h3 class="frame-title">Сувениры</h3>
+            <p class="frame-description">
+              Не только китайского, но и настоящего местного производства!
+            </p>
+          </li>
+        </ul>
+      </section>
+      <section class="Frame-32">
+        <h4>Заинтересовались?</h4>
+        <p>
+          Укажите предполагаемые даты поездки,и мы покажем вам лучшие
+          предложения гостиниц в Седоне
+        </p>
+        <a class="button" href="#">ПОИСК ГОСТИНИЦЫ В СЕДОНЕ</a>
+      </section>
     </main>
   </body>
 </html>
