--- a/index.html
+++ b/index.html
@@ -106,13 +106,64 @@
         </ul>
       </section>
       <section class="Frame-32">
-        <h4>Заинтересовались?</h4>
+        <h3>Заинтересовались?</h3>
         <p>
           Укажите предполагаемые даты поездки,и мы покажем вам лучшие
           предложения гостиниц в Седоне
         </p>
         <a class="button" href="#">ПОИСК ГОСТИНИЦЫ В СЕДОНЕ</a>
       </section>
+      <section class="subscribe">
+        <h3>Подпишитесь на рассылку</h3>
+        <p>
+          Только полезная информация и никакого спама, честное бойскаутское!
+        </p>
+        <label>
+          <input
+            type="text"
+            name="email"
+            id=""<!не>
+            method="get"
+            placeholder="Ваш e-mail"
+          />
+          <input type="submit" value="Подписаться" />
+        </label>
+      </section>
+      <footer class="pege-footer">
+        <section class="footer-social">
+          <ul class="footer-social-list">
+            <li class="footer-social-item">
+              <a class="button" href="https://vk.com/htmlacademy">
+                <span class="visually-hidden">ВКонтакте</span>
+              </a>
+            </li>
+            <li class="footer-social-item">
+              <a class="button" href="https://t.me/htmlacademy">
+                <span class="visually-hidden">Tелеграмм</span>
+              </a>
+            </li>
+            <li class="footer-social-item">
+              <a
+                class="button"
+                href=" https://www.youtube.com/user/htmlacademyru"
+              >
+                <span class="visually-hidden">Ютуб</span>
+              </a>
+            </li>
+          </ul>
+
+          <a class="phone-number">
+            <a class="footer-contacts-address-phone" href="tel:+78128121212"
+              >+78128121212</a
+            >
+            <img
+              class="lodo-html"
+              href="https://htmlacademy.ru/"
+              alt="Логотип HTML-Академии"
+            />
+          </a>
+        </section>
+      </footer>
     </main>
   </body>
 </html>
